--- a/launch.html
+++ b/launch.html
@@ -13,7 +13,7 @@
     <script>
         FHIR.oauth2.authorize({
 
-          clientId: "",
+          clientId: "9ba21399-caae-49bb-b4ea-ae91dbd53c64",
 
           scope: "launch openid fhirUser patient/*.read",
         
