--- a/index.html
+++ b/index.html
@@ -1,26 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>SAMPLE SMART ON FHIR APP</title>
-        <script src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js"></script>
-        <style>
-            #patient, #meds {
-                font-family: Monaco, monospace;
-                white-space: pre;
-                font-size: 13px;
-                height: 30vh;
-                overflow: scroll;
-                border: 1px solid #CCC;
-            }
-        </style>
-        
-    </head>
-    <body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>SAMPLE SMART ON FHIR APP</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src='./lib/js/fhir-client-v0.1.12.js'></script>
+    <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
+    <script src="app.js"></script>
+
+    <style>
+        #patient,
+        #meds {
+            font-family: Monaco, monospace;
+            white-space: pre;
+            font-size: 13px;
+            height: 30vh;
+            overflow: scroll;
+            border: 1px solid #CCC;
+        }
+
+        .hide {
+            display: none !important;
+        }
+    </style>
+
+</head>
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    
+</head>
+
+<body>
+    <div id="main-view">
         <h2>Select How You Want to Access the App</h2>
-        <button type="button"> Patient </button>
+        <button id="patientId" type="button">Patient</button>
+        <button id="providerId" type="button">Provider</button>
+    </div>
 
-        <button type="button"> Provider </button>
+    <div id="provider-view" class="hide">
+        <button class="backToMain" type="button">Back</button>
+        Doctor
+    </div>
 
-   </body>
+    <div id="patient-view" class="hide">
+        <button class="backToMain" type="button">Back</button>
+        Patient
+    </div>
+    ī
+</body>
+
 </html>
