--- a/launch.html
+++ b/launch.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAMPLE SMART ON FHIR APP</title>
     <script src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js"></script>
+    <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
 </head>
 
 <body>
